--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			    <div id="closeCookieConsent"><i class="material-icons">close</i></div>
 			    <b>Zustimmung zur Verwendung von Cookies.</b></br>Diese Website benutzt Cookies. <a href="#" target="_blank">Mehr Informationen</a>. <a class="cookieConsentOK">Zustimmen</a>
 			</div>
-<body id="top" class="cd-about">
+<body id="top" class="cd-about" style="background-color: var(--third);">
 	<section class="cd-intro" style="position: fixed; z-index: 10;">
 	<div class="cd-intro-content scale">
 		<div class="content-wrapper">
@@ -117,7 +117,7 @@
 		<!-- <a class="btn_telefon slideanim2" href="tel:+51112345667" ><i class="material-icons">phone</i></a> -->
 		<!-- <a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a> -->
 		<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 20%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">announcement</i></br>WEGEN des Corona-Virus</br>liefern wir kontaktlos!</br>Pro Shisha-Bestellung erhaltet</br>ihr einen Einweg-Schlauch.</a>
-		<a class="btn_lieferung2 slideanim3" href="#lieferzeiten" style="min-width: 20%; border-radius: 1rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">info</i></br>Liefergebiet aktuell nur Hannover!</a>
+		<a class="btn_lieferung2 slideanim3" href="#lieferzeiten" style="min-width: 30%; border-radius: 1rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">info</i></br>Liefergebiet aktuell nur Hannover!</a>
 		
 		<!--
 		<img class="slideanim3" src="img/shisha2.png" style="position: absolute;display: block;margin-left: auto;margin-right: auto;width: 100%;max-width: 70px;max-height: 100px;z-index: 2;top: 20%;right: 0px;left: 0px;"/>
@@ -577,11 +577,11 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 									<select class="selectpicker form-control" style="height: auto;border: 2px solid var(--grundfarbe);font-size: 14px;"
 										onchange="snackswahl()" id="snacksoutput" data-width="auto">
 										<option id="platzhalter" disabled selected>Snack wählen </option>
-										<option value="2.00" data-img="img/product-preview.png" data-name="Erdnuesse(300g)">Erdnüsse 150g</option>
-										<option value="3.00" data-img="img/product-preview.png" data-name="NicNac's(200g)">Nic Nac's 125g</option>
-										<option value="3.00" data-img="img/product-preview.png" data-name="Salzbrezel(200g)">Salzbrezel 200g</option>
-										<option value="1.50" data-img="img/saltletts.svg" data-name="Salzstangen(175g)">Salzstangen 250g</option>
-										<option value="1.00" data-img="img/chipsfrisch.svg" data-name="Chipsfrisch(175g)">Chipsfrisch Ungarisch 50g</option>
+										<option value="2.00" data-img="img/erdnüsse.svg" data-name="Erdnuesse(150g)">Erdnüsse 150g</option>
+										<option value="3.00" data-img="img/nicnacs.svg" data-name="NicNac's(125g)">Nic Nac's 125g</option>
+										<option value="3.00" data-img="img/salzbrezel.svg" data-name="Salzbrezel(200g)">Salzbrezel 200g</option>
+										<option value="1.50" data-img="img/saltletts.svg" data-name="Salzstangen(250g)">Salzstangen 250g</option>
+										<option value="1.00" data-img="img/chipsfrisch.svg" data-name="Chipsfrisch(50g)">Chipsfrisch Ungarisch 50g</option>
 									</select>
 								</div>
 							</div>
