--- a/index.html
+++ b/index.html
@@ -1006,101 +1006,69 @@ data-close-text="Got it!">
 								<hr class="style-two">
 								<p><b>Allgemeine Geschäftsbedingungen (AGB) </b></p>
 								<p><b>1. Geltungsbereich</b></p>
-								<p >Die Vermietung erfolgt ausschließlich aufgrund dieser Mitvereinbarung. Nebenvereinbarungen sowie abweichende Vereinbarungen 
-									müssen schriftlich festgehalten werden. Die Geschäftsbedingungen gelten in ihrer jeweils aktuell gültigen Fassung. Der Vermieter 
-									(Shisha2you) ist jederzeit berechtigt, diese AGB mit einer angemessenen Ankündigungsfrist zu ändern oder zu ergänzen. Abweichungen 
-									von diesen allgemeinen Geschäftsbedingungen sind nur verbindlich, wenn sie für jedes einzelne Geschäft vereinbart und schriftlich 
-									niedergelegt werden.</p>
-								<p><b>2. Eigentumsschutz</b></p>
-								<p >Das Mietgerät bleibt mit all seinen Bestandteilen Eigentum des Vermieters. Sie sind und bleiben uneingeschränkt dessen Eigentum. Eine 
-									Verpfändung, Sicherungsübereignung, Veräußerung oder Weitergabe der Mietgegenstände ist ausdrücklich nicht gestattet. Eine Über-
-									lassung des gemieteten Geräts an Dritte ist unzulässig. Die Kosten von Interventionsmaßnahmen zum Schutze der Besitz- und Eigen-
-									tumsrechte vom Vermieter trägt der Mieter. Der Mieter trägt ebenfalls die Kosten, die dem Vermieter im Falle von Ausfall von Geräten 
-									aufgrund von Vollstreckungsmaßnahmen entstehen. </p>
-								<p><b>3. Angebot</b></p>
-								<p >Die Darstellung der Mietgeräte auf der Website stellt kein rechtlich bindendes Angebot, sondern eine Aufforderung zur Buchungsanfrage 
-									dar. Irrtümer vorbehalten. Auf jede Buchungsanfrage erhält der Mieter ein Angebot in dem alle Gebühren/Kosten die ersichtlich sind. 
-									Jede Bestellung auf Grundlage des Angebots durch einen Mieter stellt lediglich ein verbindliches Angebot auf Abschluss eines Mietver-
-									trages dar. Erst mit der Zusendung einer Reservierungsbestätigung (per WhatsApp) kommt der Kaufvertrag zustande. </p>
-								<p><b>4. Mietpreis</b></p>
-								<p >Der Mietpreis versteht sich als Lieferung ab Standort Hannover Mitte. Preisänderungen durch Irrtümer sind vorbehalten. Der Mietpreis 
-									kann durch ein individuelles Angebot durch den Vermieter an den Mieter abweichen (Rabatte, Vergünstigungen). </p>
-								<p><b>5. Lieferung/Abholung </b></p>
-								<p >Die Zusage eines Anliefer- bzw. Miettermins erfolgt unter Vorbehalt der Verfügbarkeit des Mietgegenstandes und der Liefermöglichkeit. 
-									Im Falle unvorhersehbarer außergewöhnlicher und unverschuldeter Umstände sowie bei einem Defekt auf dem Versandweg erhält der 
-									Mieter seinen Mietpreis zurück, sofern der Mietgegenstand nicht genutzt werden kann. Der Mieter verpflichtet sich für den Fall einer 
-									Nichtlieferung aus oben genannten Gründen vorzubeugen und sich einer Alternativlösung zu bemühen. 
-									Die Lieferung und Abholung des Mietgegenstandes erfolgt gemäß der Öffnungszeiten:  
+								<p >Die folgenden Allgemeinen Geschäftsbedingungen (AGB) gelten für alle Verträge mit Shisha2you (nachfolgend „Vermieter“), 
+									insbesondere für die Vermietung und Lieferung von Shishas sowie aller hiermit im Zusammenhang erbrachten Leistungen.</p>
+								<p><b>2. Vertragsschluss</b></p>
+								<p >Die Darstellung der Mietgeräte auf der Webseite stellt kein rechtlich bindendes Angebot, sondern eine Aufforderung zur 
+									Buchungsanfrage dar. Der Mieter kann aus dem Sortiment des Vermieters Produkte auswählen und diesen in einem so genannten 
+									Warenkorb sammeln. Über den Bestell-Button gibt er ein verbindliches Angebot auf Abschluss eines Vertrages ab. Der Antrag 
+									kann jedoch nur abgegeben und übermittelt werden, wenn der Kunde durch Klicken auf den Button „AGB akzeptieren“, diese 
+									Vertragsbedingungen akzeptiert und dadurch in seinen Antrag aufgenommen hat. Der Vertrag kommt erst durch die Abgabe der 
+									Annahmeerklärung durch den Vermieter zustande, an die Mobilfunknummer des Mieters per WhatsApp versandt wird.</p>
+								<p><b>3. Mietpreis, Bezahlung</b></br>
+								<p >3.1. Die vereinbarten Preise verstehen sich einschließlich der zum Zeitpunkt des Vertragsschlusses geltenden Umsatzsteuer.</p>
+								<p >3.2. Die Zahlung kann über den Zahlungsdienstleister „PayPal“ (PayPal (Europe) S.a.r.l. et Cie s.c.a, 22-24 Boulevard 
+									Royal, L-2449 Luxembourg), unter Geltung der PayPal-Nutzungsbedingungen, einsehbar unter www.paypal.com, erfolgen. Im 
+									Rahmen des Bestellvorgangs durch den Mieter wird er auf die Website von PayPal weitergeleitet. Dort bestätigt der Mieter 
+									die Zahlungsanweisung an den Vermieter. Der Vermieter weist PayPal nach Annahme des Angebots zur Einleitung der 
+									Zahlungstransaktion an bzw. nimmt das Angebot des Mieters spätestens mit Anweisung zur Einleitung der Zahlungstransaktion an.</p>
+								<p>3.3.	Eine Barzahlung ist möglich.</p>
+								</p>
+								<p><b>4. Lieferung/Abholung</b></p>
+								<p >Die Bestellung wird grundsätzlich geliefert und wieder abgeholt, sofern nicht eine individuelle Abrede erfolgt ist. 
+									Eine Lieferung an eine Packstation ist ausgeschlossen. </br>
+									Lieferung (und Abholung) sowie Rückgabe des Mietgegenstandes erfolgt gemäß den geltenden Öffnungszeiten: </br>
 									<p >- Montag bis Donnerstag und Sonntag: Vermietung ab 15:00 Uhr – Abholung bis spätestens 23:00 Uhr</p> 
-									<p >- Freitag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Samstag 02:00 Uhr </p>
-									<p >- Samstag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Sonntag 02:00 Uhr </p>
-									<p >Individuelle Absprachen sind möglich. </p></p>
-								<p><b>6. Mietzeit </b></p>
-								<p >Die Mietzeit beginnt und endet laut dem vereinbarten Datum und der vereinbarten Uhrzeit des Mietvertrags. </p>
-								<p><b>7. Zahlungsbedingungen </b></p>
-								<p >Die Zahlung der Mietgebühr hat bei Lieferung im Voraus zu erfolgen. </p>
-								<p><b>8. Schadensersatzansprüche/Haftungsausschlüsse </b></p>
-								<p >Schadensersatzansprüche des Mieters, gleichgültig aus welchem Rechtsgrund, insbesondere wegen Schlechterfüllung, Verletzung von 
-									Nebenpflichten und Verschulden bei Vertragsverhandlungen sowie aus unerlaubter Handlung werden ausgeschlossen, soweit der Scha-
-									den nicht vorsätzlich oder grob fahrlässig verursacht wurde.  
-									Für Schäden und Folgeschäden übernimmt der Vermieter keinerlei Haftung oder Verpflichtung zu Schadenersatz, gleich aus welchem 
-									Rechtsgrund. Der Haftungsausschluss betrifft insbesondere Nichtzustandekommen des Mietvertrages wegen Beschädigung oder Total-
-									ausfall des Mietgegenstandes auf dem Transportweg oder beim Mieter sowie wegen Nichtverfügbarkeit durch verspätete Rückgabe der 
-									Geräte von Vormietern. Ebenso übernimmt der Vermieter keine Haftung bei auftretenden Funktionsstörungen oder Totalausfall des 
-									Mietgegenstandes und jeden sich daraus ergebenden Folgeschaden, sei es nun unmittelbarer oder mittelbarer Art, einschließlich Ver-
-									dienstausfall oder entgangener Gewinn. Eine Haftung des Vermieters für Sach- und Personenschäden, die sich aus dem Mietgebrauch 
-									ergeben könnten, sind ausgeschlossen.  </p>
-								<p><b>9. Mängelrügen/Pflichten des Mieters </b></p>
-								<p >Der Mieter hat die Mietgegenstände unmittelbar nach Empfang auf Vollständigkeit, Funktionstüchtigkeit und einwandfreie Beschaffen-
-									heit zu überprüfen. Die Mietgegenstände gelten als in einwandfreiem Zustand übernommen, wenn eventuelle Mängel nicht umgehend 
-									bei Lieferung an den Vermieter gemeldet worden sind. Auf eigene Veranlassung durchgeführte Reparaturen oder Serviceleistungen sind 
-									nicht zulässig und benötigen die Zustimmung des Vermieters. 
-									Jeder auftretenden Mangel, Schäden, Verlust oder Untergang der Mietgegenstände sind dem Vermieter unverzüglich schriftlich anzu-
-									zeigen. Die Entwendung der Mietgegenstände aus dem Besitz des Mieters ist von dem Mieter unverzüglich gegenüber den staatlichen 
-									Ermittlungsbehörden anzuzeigen. Dem Mieter obliegt es, den Untergang oder die Entwendung der Mietgegenstände aus seinem Besitz 
-									nachzuweisen. 
-									Sollte ein Mietgegenstand zu dem Zeitpunkt der Anmietung deutliche Gebrauchsspuren oder Schäden aufweisen – welche die Funktio-
-									nalität jedoch nicht beeinträchtigen – so werden diese vom Vermieter dokumentiert und im Mietvertrag festgehalten oder vor der An-
-									mietung mitgeteilt. 
-									Der Mieter verpflichtet sich zum sorgfältigen Umgang und ausschließlich zur üblichen Nutzung der gemieteten Geräte. Die beiliegenden 
-									Anweisungen sind zu befolgen. Er haftet für aufkommende Schäden infolge von Fahrlässigkeit, grober Fahrlässigkeit oder Diebstahl. 
-									Mietobjekte sind inkl. Zubehör zum vereinbarten Termin in einwandfreiem Zustand zurückzugeben.  
-									Der Mieter haftet für abhanden gekommenes Zubehör und dem Mietgerät selbst, zum Preis der Neubeschaffung. Die Geräte gelten als 
-									in einwandfreiem Zustand übernommen, soweit evtl. Mängel nicht bei der Empfangnahme ausdrücklich gerügt werden.  
-									Wird die Shisha defekt zurückgegeben ist Schadensersatz in folgender Höhe zu leisten:  
-									<p >- Defekter/ fehlender Kopf: 5€ </p>
-									<p >- Defekter/fehlender Schlauch: 15€ </p>
-									<p >- Defekter Glasbehälter: 30€ </p>
-									<p >- Komplett defekte Shisha: 90€ </p>
-								<p><b>10. Haftung des Mieters </b></p>
-								<p >Der Mieter haftet für die von ihm schuldhaft verursachte Verschlechterung, Verlust oder Untergang der Mietgegenstände während der 
-									vertraglich vereinbarten Besitzzeit oder bei einer eigenmächtigen Verlängerung der Besitzzeit durch den Mieter. Der Mieter haftet für 
-									abhanden gekommenes Zubehör und dem Mietgerät selbst, zum Preis der Neubeschaffung. Die Geräte gelten als in einwandfreiem 
-									Zustand übernommen, soweit evtl. Mängel nicht bei der Empfangnahme ausdrücklich gerügt werden. 
-									11. Gefahrenübergang </p>
-								<p><b>11. Gefahrenübergang </b></p>
-								<p>Die Gefahr geht auf den Mieter über, sobald der Mietgegenstand dem Mieter übergeben wurde. Bei der Rückgabe des Mietgegenstands 
-									geht die Gefahr mit der Übergabe des Mietgegenstands an den Lieferanten vom Mieter an den Vermieter über. </p>
-								<p><b>12. Rückgabe defekter Mietgeräte/Haftung des Mieters </b></p>
-								<p >Gibt der Mieter den Mietgegenstand defekt zurück, so hat er dafür zu haften (s. Punkt 9 und 10). Der Vermieter hat das Recht, den 
-									Mietgegenstand fachgerecht reparieren zu lassen bzw. im Falle der Unmöglichkeit oder Unwirtschaftlichkeit einer Reparatur Ersatzge-
-									räte zu kaufen. Die Kosten werden dem Mieter in Rechnung gestellt. Eine Reinigung der Shisha ist nicht zu leisten.  </p>
-								<p><b>13. Lieferprobleme </b></p>
-								<p >Kann ein Gerät nicht geliefert werden, erfolgt keine zusätzliche/weitere Schadenübernahme/Zahlung durch den Vermieter (s. Punkt 7). </p>
-								<p><b>14. Mindestalter </b></p>
-								<p >Der Mieter muss voll geschäftsfähig sein. Bei der Warenübergabe des Mietgeräts muss ein gültiger Personalausweis vorgelegt werden. 
-									(Es wird eine Kopie oder ein Foto des Ausweises angefertigt). </p>
-								<p><b>15. Jugendschutz</b></p>
-								<p >Generell verbietet das Jugendschutzgesetz Kindern und Jugendlichen den Erwerb und Konsum von Tabakwaren. Die Abgabe von Ta-
-									bakwaren an unter 18-Jährige wird untersagt. Der Vermieter übernimmt keinerlei Haftung für den Gebrauch bei Minderjährigen unter 
-									18 Jahren, sollte der Mieter den Mietgegenstand Minderjährigen zur Verfügung stellen. </p>
-								<p><b>16. Widerrufsrecht </b></p>
-								<p >Sie können Ihre Vertragserklärung widerrufen. Es ist ein Schadensersatz in voller Höhe der vereinbarten Bestellung zu leisten.  </p>
-								<p><b>17. Sonstiges </b></p>
-								<p >Der Mieter erklärt sein Einverständnis damit, dass der Vermieter seine im Rahmen der Geschäftsbeziehungen zugehenden, personenbe-
-									zogenen Daten speichert und nicht an Dritte weitergibt. Die Daten werden im Rahmen der gesetzlichen Regelungen gespeichert. Zur 
-									Vertragsabwicklung und zur technischen Unterstützung der durch den Mieter in Anspruch genommenen Leistungen oder Funktionalitä-
-									ten können die Daten des Mieters im Rahmen der Auftragsdatenverarbeitung an beauftragte Unternehmen übermittelt werden.  </p>
+									<p >- Freitag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Samstag um 02:00 Uhr </p>
+									<p >- Samstag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Sonntag um 02:00 Uhr </p>
+									<p >- Individuelle Absprachen sind möglich. </p>
+									Es ist darauf zu achten, dass die vereinbarte Lieferung (und Abholung) je nach Geschäftsaufkommen variieren kann.
+									</p>
+								<p><b>5. Mietzeit </b></p>
+								<p >Es gilt die vereinbarte Mietzeit. Der Vertrag und somit die gestattete Nutzungsdauer enden 
+									automatisch am im Bestellvorgang genannten Zeitpunkt, ohne dass es einer Kündigung bedarf. 
+									Erfolgt die Rückgabe verspätet, ist Shisha2you berechtigt, pro angefangene Stunde eine 
+									angemessene Entschädigung zu verlangen. </p>
+								<p><b>6. Pflicht der Mieters</b></p>
+								<p >Der Mieter ist verpflichtet, dem Vermieter bei Übergabe mitzuteilen, wenn sich der Vertragsgegenstand nicht 
+									in ordnungsgemäßen Zustand befindet oder der Vertragsgegenstand unvollständig ist. Der Mieter verpflichtet sich, 
+									den Vertragsgegenstand sorgfältig, sachgemäß und schonend zu benutzen und zu behandeln. Der Mieter darf den 
+									Vertragsgegenstand nur in verkehrsüblicher Weise nutzen. Es ist dem Mieter untersagt, Veränderungen am 
+									Vertragsgegenstand vorzunehmen oder vornehmen zu lassen. Sollten während der Vertragslaufzeit Mängel oder 
+									Beschädigungen an dem Vertragsgegenstand auftreten, ist der Mieter zur unverzüglichen Anzeige gegenüber dem 
+									Vermieter verpflichtet. Der Mieter ist verpflichtet, einen Diebstahl unverzüglich bei der Polizei zur Anzeige 
+									zu bringen und den Vermieter hiervon zu unterrichten. </p>
+								<p><b>7. Haftung</b>
+								<p >7.1.Der Mieter nutzt den Vertragsgegenstand auf eigene Gefahr. Der Mieter hat den Vertragsgegenstand in dem 
+									Zustand zurückzugeben, in welchem er ihn übernommen hat. Der Mieter haftet für Schäden, die während der Vertragsdauer 
+									aus Diebstahl, Beschädigung und/oder (Teil-)Verlust entstehen. Der Mieter haftet weiter für alle Schäden, die dem 
+									Vermieter aufgrund der Verletzung von Vertragspflichten des Mieters entstehen. </p>
+								<p>7.2.	Der Vermieter haftet nur für Vorsatz und grobe Fahrlässigkeit oder für eine Verletzung des Lebens, 
+									des Körpers oder der Gesundheit. Weitergehende Ansprüche gegenüber dem Vermieter sind ausgeschlossen. Die 
+									Haftungsbeschränkung bzw. der Haftungsausschluss gelten auch für die persönliche Haftung von Angestellten, 
+									Arbeitnehmern, Vertretern und/oder Erfüllungsgehilfen des Vermieters.</p>
+								</p>
+								<p><b>8. Jugendschutz</b></p>
+								<p >Der Vermieter hat durch persönliche Identitäts- und Altersüberprüfung des Mieters sicherzustellen, dass 
+									der Mieter das für den Vertragsgegenstand erforderliche Mindestalter i.S.d. Jugendschutzgesetzes erreicht 
+									hat. Der Mieter muss zum Zeitpunkt der Bestellung das 18. Lebensjahr vollendet haben. Die Altersprüfung 
+									erfolgt durch Vorlage eines gültigen, mit Lichtbild versehenen Ausweisdokuments. Der Vermieter ist berechtigt, 
+									eine Ablichtung bzw. ein Foto von dem Ausweisdokument zu erstellen, welches lediglich der Sicherstellung und 
+									dem Nachweis der Altersprüfung dient und nicht für andere Zwecke verwendet oder an Dritte weitergegeben wird. 
+									Der Vertragsgegenstand wird erst nach erfolgreicher Altersprüfung und nur an den Besteller persönlich übergeben.</p>
+								<p><b>9. Schlussbestimmungen</b></p>
+								<p >Sollten einzelne Bestimmungen der AGB unwirksam sein oder werden, so wird dadurch die Wirksamkeit der übrigen 
+									Bestimmungen nicht berührt.</p>
 					</div>
 					<div class="modal-footer"></div>
 				</div>
