--- a/index.html
+++ b/index.html
@@ -116,8 +116,16 @@
 
 		<!-- <a class="btn_telefon slideanim2" href="tel:+51112345667" ><i class="material-icons">phone</i></a> -->
 		<!-- <a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a> -->
-		<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 20%; border-radius: 2rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">announcement</i></br>WEGEN des Corona-Virus</br>liefern wir kontaktlos!</br>Pro Shisha-Bestellung erhaltet</br>ihr einen Einweg-Schlauch.</a>
-		<a class="btn_lieferung2 slideanim3" href="#lieferzeiten" style="min-width: 30%; border-radius: 1rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">info</i></br>Liefergebiet aktuell nur Hannover!</a>
+		<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 20%; border-radius: 1rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">
+			<i class="material-icons">announcement</i></br>
+			Wegen Coronavirus</br>
+			liefern wir kontaktlos!</br></br>
+			Shishas werden vor</br>
+			Lieferung desinfiziert.</br></br>
+			Zudem erhaltet ihr</br>
+			Einweg-Schläuche.</br></a>
+		<!--<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 20%; top: 130px;border-radius: 1rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"></a>-->
+		<a class="btn_lieferung2 slideanim3" href="#lieferzeiten" style="min-width: 20%; border-radius: 1rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);"><i class="material-icons">info</i></br>Liefergebiet aktuell nur Hannover!</a>
 		
 		<!--
 		<img class="slideanim3" src="img/shisha2.png" style="position: absolute;display: block;margin-left: auto;margin-right: auto;width: 100%;max-width: 70px;max-height: 100px;z-index: 2;top: 20%;right: 0px;left: 0px;"/>
@@ -746,10 +754,11 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 <hr class="style-two">
 <footer class="container-fluid text-center" style="background: linear-gradient(
 	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center; color: var(--grundfarbe); padding-bottom: 20px;">
+  <p><a style="font-size: 12px;" href="#myModal2" class="links" id="modal-trigger2" data-toggle="modal">Allgemeine Geschäftsbedingungen</a></p>
   <p><a style="font-size: 12px;" href="#0" class="links" id="modal-trigger" data-type="cd-modal-trigger">Datenschutzerklärung</a></p>
   <p><a style="font-size: 12px;" href="#myModal" class="links" id="modal-trigger2" data-toggle="modal">Impressum</a></p>
   <hr class="style-two">
-  <p>Copyright © 2020 <a style="color: var(--grundfarbe)" href="#" title="shisha2you">shisha2you</a>. </br>Alle Rechte vorbehalten.</p>
+  <p style="margin-top: 20px;;">Copyright © 2020 <a style="color: var(--grundfarbe)" href="#" title="shisha2you">shisha2you</a>. </br>Alle Rechte vorbehalten.</p>
 </footer>
 
 <!-- /////// NAVIGATE TOP BUTTON /////-->
@@ -1000,10 +1009,12 @@ data-close-text="Got it!">
 					</div>
 					<div class="modal-body p-4" id="result" style="text-align: left; width: 100%;padding-right: 0px; height: auto;">
 								<p ><b>Gebrauchsanweisung für die Benutzung der Shisha</b></p>
-								<p >1. Die Shisha ist stets sorgfältig zu behandeln und nach dieser Anweisung zu benutzen. In geschlossenen Räumlichkeiten sollte während der Benutzung ein Fenster geöffnet sein. </p>
-								<p >2. Aufgrund der erhöhten Brandgefahr darf die Shisha während der Benutzung nicht unbeaufsichtigt bleiben. </p>
-								<p >3. Eine Reinigung der Shisha ist nicht zu leisten.  </p>
+								<p style="margin-left: 10px;">1. Die Shisha ist stets sorgfältig zu behandeln und nach dieser Anweisung zu benutzen. In 
+									geschlossenen Räumlichkeiten sollte während der Benutzung ein Fenster geöffnet sein. </p>
+								<p style="margin-left: 10px;">2. Aufgrund der erhöhten Brandgefahr darf die Shisha während der Benutzung nicht unbeaufsichtigt bleiben. </p>
+								<p style="margin-left: 10px;">3. Eine Reinigung der Shisha ist nicht zu leisten. </p>
 								<hr class="style-two">
+								<p></p>
 								<p><b>Allgemeine Geschäftsbedingungen (AGB) </b></p>
 								<p><b>1. Geltungsbereich</b></p>
 								<p >Die folgenden Allgemeinen Geschäftsbedingungen (AGB) gelten für alle Verträge mit Shisha2you (nachfolgend „Vermieter“), 
@@ -1016,22 +1027,23 @@ data-close-text="Got it!">
 									Vertragsbedingungen akzeptiert und dadurch in seinen Antrag aufgenommen hat. Der Vertrag kommt erst durch die Abgabe der 
 									Annahmeerklärung durch den Vermieter zustande, an die Mobilfunknummer des Mieters per WhatsApp versandt wird.</p>
 								<p><b>3. Mietpreis, Bezahlung</b></br>
-								<p >3.1. Die vereinbarten Preise verstehen sich einschließlich der zum Zeitpunkt des Vertragsschlusses geltenden Umsatzsteuer.</p>
-								<p >3.2. Die Zahlung kann über den Zahlungsdienstleister „PayPal“ (PayPal (Europe) S.a.r.l. et Cie s.c.a, 22-24 Boulevard 
+								<p style="margin-left: 10px;">3.1. Die vereinbarten Preise verstehen sich einschließlich der zum Zeitpunkt des Vertragsschlusses 
+									geltenden Umsatzsteuer.</p>
+								<p style="margin-left: 10px;">3.2. Die Zahlung kann über den Zahlungsdienstleister „PayPal“ (PayPal (Europe) S.a.r.l. et Cie s.c.a, 22-24 Boulevard 
 									Royal, L-2449 Luxembourg), unter Geltung der PayPal-Nutzungsbedingungen, einsehbar unter www.paypal.com, erfolgen. Im 
 									Rahmen des Bestellvorgangs durch den Mieter wird er auf die Website von PayPal weitergeleitet. Dort bestätigt der Mieter 
 									die Zahlungsanweisung an den Vermieter. Der Vermieter weist PayPal nach Annahme des Angebots zur Einleitung der 
 									Zahlungstransaktion an bzw. nimmt das Angebot des Mieters spätestens mit Anweisung zur Einleitung der Zahlungstransaktion an.</p>
-								<p>3.3.	Eine Barzahlung ist möglich.</p>
+								<p style="margin-left: 10px;">3.3. Eine Barzahlung ist möglich.</p>
 								</p>
 								<p><b>4. Lieferung/Abholung</b></p>
 								<p >Die Bestellung wird grundsätzlich geliefert und wieder abgeholt, sofern nicht eine individuelle Abrede erfolgt ist. 
 									Eine Lieferung an eine Packstation ist ausgeschlossen. </br>
 									Lieferung (und Abholung) sowie Rückgabe des Mietgegenstandes erfolgt gemäß den geltenden Öffnungszeiten: </br>
-									<p >- Montag bis Donnerstag und Sonntag: Vermietung ab 15:00 Uhr – Abholung bis spätestens 23:00 Uhr</p> 
-									<p >- Freitag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Samstag um 02:00 Uhr </p>
-									<p >- Samstag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Sonntag um 02:00 Uhr </p>
-									<p >- Individuelle Absprachen sind möglich. </p>
+									<p style="margin-left: 10px;">- Montag bis Donnerstag und Sonntag: Vermietung ab 15:00 Uhr – Abholung bis spätestens 23:00 Uhr</p> 
+									<p style="margin-left: 10px;">- Freitag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Samstag um 02:00 Uhr </p>
+									<p style="margin-left: 10px;">- Samstag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Sonntag um 02:00 Uhr </p>
+									<p style="margin-left: 10px;">- Individuelle Absprachen sind möglich. </p>
 									Es ist darauf zu achten, dass die vereinbarte Lieferung (und Abholung) je nach Geschäftsaufkommen variieren kann.
 									</p>
 								<p><b>5. Mietzeit </b></p>
@@ -1049,11 +1061,11 @@ data-close-text="Got it!">
 									Vermieter verpflichtet. Der Mieter ist verpflichtet, einen Diebstahl unverzüglich bei der Polizei zur Anzeige 
 									zu bringen und den Vermieter hiervon zu unterrichten. </p>
 								<p><b>7. Haftung</b>
-								<p >7.1.Der Mieter nutzt den Vertragsgegenstand auf eigene Gefahr. Der Mieter hat den Vertragsgegenstand in dem 
+								<p style="margin-left: 10px;">7.1.Der Mieter nutzt den Vertragsgegenstand auf eigene Gefahr. Der Mieter hat den Vertragsgegenstand in dem 
 									Zustand zurückzugeben, in welchem er ihn übernommen hat. Der Mieter haftet für Schäden, die während der Vertragsdauer 
 									aus Diebstahl, Beschädigung und/oder (Teil-)Verlust entstehen. Der Mieter haftet weiter für alle Schäden, die dem 
 									Vermieter aufgrund der Verletzung von Vertragspflichten des Mieters entstehen. </p>
-								<p>7.2.	Der Vermieter haftet nur für Vorsatz und grobe Fahrlässigkeit oder für eine Verletzung des Lebens, 
+								<p style="margin-left: 10px;">7.2.	Der Vermieter haftet nur für Vorsatz und grobe Fahrlässigkeit oder für eine Verletzung des Lebens, 
 									des Körpers oder der Gesundheit. Weitergehende Ansprüche gegenüber dem Vermieter sind ausgeschlossen. Die 
 									Haftungsbeschränkung bzw. der Haftungsausschluss gelten auch für die persönliche Haftung von Angestellten, 
 									Arbeitnehmern, Vertretern und/oder Erfüllungsgehilfen des Vermieters.</p>
@@ -1192,15 +1204,17 @@ $(document).ready(function(){
 				
 				if (window.hasOwnProperty("positionx")) {
 					x = x + "Bitte%20an%20folgenden%20Standort%20liefern:%20https://maps.google.com/?q=" + positionx + "," + positiony;
-					x = x + "%20%20%20PayPal-Zahlung:%20https://www.paypal.me/shisha2you/" + gesamtpreis;
+					x = x + "%20%20%20%20%20%20PayPal-Zahlung:%20https://www.paypal.me/shisha2you/" + gesamtpreis;
+					x = x + "%20%20%20Barzahlung bei Lieferung möglich.";
 					warenausgang.href = x;
 					console.log("Gesamtlink " + x);
 					return true
 				} else {
 
 					//navigator.geolocation.getCurrentPosition(showPosition);
-					x = x + "Bitte%20an%20folgenden%20Standort%20liefern:";
-					x = x + "%20%20%20PayPal-Zahlung:%20https://www.paypal.me/shisha2you/" + gesamtpreis;
+					x = x + "Bitte%20an%20folgenden%20Standort%20liefern:%20%20%20%20%20";
+					x = x + "%20%20%20%20%20PayPal-Zahlung:%20https://www.paypal.me/shisha2you/" + gesamtpreis;
+					x = x + "%20%20%20Barzahlung bei Lieferung möglich.";
 					warenausgang.href = x;
 					return true
 					
