--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
 		<!-- <a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a> -->
 		<a class="btn_lieferung slideanim2" href="#lieferzeiten" style="min-width: 20%; border-radius: 1rem; box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">
 			<i class="material-icons">announcement</i></br>
+			<?php while($row = $db_erg->fetch_assoc()) {
+	echo "Bestellung" . $row["bestellung"]. "/ Datum: " . $row["Datum"] . "/ Index: "
+	. $row["Index"]. "";
+	}?>
 			Wegen Coronavirus</br>
 			liefern wir kontaktlos!</br></br>
 			Shishas werden vor</br>
